[metadata]
name = django-bunny-storage
version = 0.1.3
description = Provides Bunny.net file storage in Django.
long_description = file: README.md
long_description_content_type = text/markdown
author = Will Meyers
author_email = will@willmeyers.net
maintainer = Will Meyers
maintainer_email = will@willmeyers.net
url = https://github.com/willmeyers/django-bunny-storage
license = MIT License
keywords =
    django
    storage
    files
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir=
    =src
packages = find:
include_package_data = True
install_requires = Django>=3.0
python_requires = >=3.7
zip_safe = False

[options.packages.find]
where = src
